<resources>
    <string name="app_name">E-Eng</string>
    <string name="title">Learning English</string>
    <string name="btn_syllabary">Syllabary</string>
    <string name="btn_record">Answer Records</string>
    <string name="btn_quiz">Quizzes</string>
    <string name="btn_highscore">High Score</string>
    <string name="signin_other_error">signin_other_error</string>
    <string name="signin_failure">signin_failure</string>
    <string name="btn_achieve">Achievement</string>

</resources>
