<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.anthony.assignment.MainActivity">
    <!-- <TextView
         android:id="@+id/Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:textColor="#000"
         android:fontFamily="serif"
         android:text="@string/title"
         android:textSize="30sp"
         android:textStyle="normal|bold" />-->

    <info.hoang8f.widget.FButton
        android:id="@+id/btn_quiz"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_syllabary"
        android:layout_alignStart="@+id/btn_syllabary"
        android:layout_below="@+id/btn_tutorial"
        android:layout_marginTop="20dp"
        android:onClick="showQuiz"
        android:text="@string/btn_quiz"
        android:textColor="@color/white"
        android:textSize="18sp"
        fbutton:buttonColor="@color/colorPrimary2"
        fbutton:cornerRadius="5dp"
        fbutton:shadowColor="@color/colorPrimary_Shadow"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp" />

    <info.hoang8f.widget.FButton
        android:id="@+id/btn_tutorial"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_quiz"
        android:layout_alignStart="@+id/btn_quiz"
        android:layout_below="@+id/btn_syllabary"

        android:layout_marginTop="20dp"
        android:onClick="showTutorials"
        android:text="Tutorials"
        android:textColor="@color/white"
        android:textSize="18sp"
        fbutton:buttonColor="@color/colorPrimary2"
        fbutton:cornerRadius="5dp"
        fbutton:shadowColor="@color/colorPrimary_Shadow"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp" />


    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="BallPulseIndicator" />

    <info.hoang8f.widget.FButton
        android:id="@+id/btn_syllabary"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-medium"
        android:onClick="showSyllabary"
        android:text="@string/btn_syllabary"
        android:textColor="@color/white"
        android:textSize="18sp"
        fbutton:buttonColor="@color/colorPrimary2"
        fbutton:cornerRadius="5dp"
        fbutton:shadowColor="@color/colorPrimary_Shadow"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp" />

    <info.hoang8f.widget.FButton
        android:id="@+id/btn_highscore"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:onClick="showHighScore"
        android:text="@string/btn_highscore"
        android:textColor="@color/white"
        android:textSize="18sp"
        fbutton:buttonColor="@color/colorPrimary2"
        fbutton:cornerRadius="5dp"
        fbutton:shadowColor="@color/colorPrimary_Shadow"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp"
        android:layout_below="@+id/btn_record"
        android:layout_alignLeft="@+id/btn_record"
        android:layout_alignStart="@+id/btn_record"
        android:layout_marginTop="23dp" />

    <info.hoang8f.widget.FButton
        android:id="@+id/btn_record"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:onClick="showRecords"
        android:text="@string/btn_record"
        android:textColor="@color/white"
        android:textSize="18sp"
        fbutton:buttonColor="@color/colorPrimary2"
        fbutton:cornerRadius="5dp"
        fbutton:shadowColor="@color/colorPrimary_Shadow"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp"
        android:layout_below="@+id/btn_quiz"
        android:layout_alignLeft="@+id/btn_quiz"
        android:layout_alignStart="@+id/btn_quiz"
        android:layout_marginTop="23dp" />

    <info.hoang8f.widget.FButton
        android:id="@+id/btn_achieve"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:onClick="showAchieve"
        android:text="@string/btn_achieve"
        android:textColor="@color/white"
        android:textSize="18sp"
        fbutton:buttonColor="@color/colorPrimary2"
        fbutton:cornerRadius="5dp"
        fbutton:shadowColor="@color/colorPrimary_Shadow"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp"
        android:layout_below="@+id/btn_highscore"
        android:layout_alignLeft="@+id/btn_highscore"
        android:layout_alignStart="@+id/btn_highscore" />
</RelativeLayout>
